tests/errors/contractTypeMismatch.milo
// @error: requires clause must be bool

fn foo(x: i64): i64
requires x + 1
{
    return x
}

fn main(): i32 {
    print(foo(5))
    return 0
}
